<resources>
    <string name="app_name">Reflect</string>
    <string name="hello_there_please_sign_in">Hello there! Please sign in!</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="emailHint">Email</string>
    <string name="dateTitle">How I\'m Feeling on %1$s</string>
    <string name="textview">TextView</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Are You Sure You Want to Log Out?</string>
</resources>
